=adding info on the flux.sh